# ai-dev-flow

./: .gitignore  README.md  ai  claude_paste.ahk  pyproject.toml
agents/devflow-builder/: AGENTS.md
agents/devflow-ceo/: AGENTS.md
agents/devflow-feature/: AGENTS.md
agents/devflow-qa/: AGENTS.md
agents/devflow-reviewer/: AGENTS.md
agents/devflow-sre/: AGENTS.md
devflow/: api.py  artifact_publisher.py  cli.py  config.py  connector_scaffold.py  contract.py  deploy.py  gatekeeper.py  metrics.py  migrate.py  orient.py  paperclip.py  session.py  waivers.py
devflow/modes/: feature.py
devflow/tui/: app.py  widgets.py
docs/: aldc-integration-plan-v0.6.md  aldc-integration-plan-v0.7.md  artifact-contract.md  backlog.md  example-feature.md  example-project.md  guidelines-traceability.md  guidelines.md  how-to-run-real-feature.md  manifest.md  pilot-runbook.md  prefect-server-lifecycle.md  runbook-prefect-creds.md  skills.md  system.md
docs/workflows/: connector.md
lib/: devflow.py
sandbox/sample-app/: README.md  prefect.toml
scripts/: assert_rows.py  devflow-smoke.sh  prefect-sandbox.yml
skills/: README.md
skills/architecture-diagrams/: SKILL.md
skills/code-review/: SKILL.md
skills/connector/: SKILL.md
skills/connector-build/: SKILL.md
skills/deploy/: SKILL.md
skills/new-project/: SKILL.md
skills/prd-to-plan/: SKILL.md
skills/qa/: SKILL.md
skills/security-review/: SKILL.md
skills/tdd/: SKILL.md
tests/: conftest.py  test_contract_consistency.py  test_devflow.py  test_paperclip.py  test_waivers.py
workflows/: connector.yaml
(+8 files in other folders)
