[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "devflow"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "textual>=0.70.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
devflow = "devflow.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["devflow*"]
